--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# original source codes in languages directory
+languages/cpp/project/
+languages/c/project/
+languages/rust/project/
+languages/go/project/
+languages/java/project/
+languages/python/project/
