feat: SBOM_parser.py 개발, doc: .gitignore 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,6 @@ languages/rust/project/
 languages/go/project/
 languages/java/project/
 languages/python/project/
+
+# code/analyze directory's json files
+code/analyze/*.json
